# gerrit-mcp-server

./: .gitignore  AGENT.md  GEMINI.md  OWNERS  README.md  build-gerrit.sh  gemini-cli-config.template.json  gemini-extension.json  munich-gerrit-talk.code-workspace  pyproject.toml  requirements.txt  server.sh  test.sh  uv-requirements.txt
docs/: available_tools.md  best_practices.md  configuration.md  contributing.md  gemini-cli.md  testing.md  use_cases.md
gerrit_mcp_server/: bug_utils.py  gerrit_auth.py  gerrit_command_argument_defs.json  gerrit_config.json  gerrit_config.sample.json  gerrit_details.json  gerrit_urls.py  main.py  sort_util.py  url_utilities.py
tests/: test_config.json
tests/e2e/: e2e_config.json  e2e_config.sample.json  test_e2e_main.py  test_main.py
tests/integration/: test_build_and_run.py  test_main.py
tests/unit/: test_abandon.py  test_add_reviewer.py  test_bug_utils.py  test_changes_submitted_together.py  test_cli.py  test_create_change.py  test_delete_draft_comment.py  test_delete_draft_comments.py  test_gerrit_auth.py  test_gerrit_config.py  test_gerrit_urls.py  test_get_change_details.py  test_get_cherry_picks_of_change.py  test_get_file_diff.py  test_get_most_recent_cl.py  test_list_change_comments.py  test_list_change_files.py  test_main.py  test_post_draft_comment.py  test_post_review_comment.py  test_publish_drafts.py  test_query_changes.py  test_revert_change.py  test_revert_submission.py  test_set_ready_for_review.py  test_set_topic.py  test_set_work_in_progress.py  test_sort_util.py  test_suggest_reviewers.py
