[project]
name = "gerrit-mcp-server"
version = "1.0.0"
description = "An MCP server for interacting with Gerrit via curl"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "uvicorn",
    "websockets"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gerrit_mcp_server"]

[tool.setuptools.package-data]
gerrit_mcp_server = ["*.json"]
